WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282581
Nested backdrop filters don't compute opaque backdrop root state correctly
https://bugs.webkit.org/show_bug.cgi?id=282581
Summary
Nested backdrop filters don't compute opaque backdrop root state correctly
Matt Woodrow
Reported
2024-11-04 17:31:17 PST
<
rdar://139034016
>
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-11-04 17:33:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36167
EWS
Comment 2
2024-11-06 13:22:12 PST
Committed
286242@main
(8504cfe233f4): <
https://commits.webkit.org/286242@main
> Reviewed commits have been landed. Closing PR #36167 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug