Nested backdrop filters don't compute opaque backdrop root state correctly. https://bugs.webkit.org/show_bug.cgi?id=282581 <rdar://139034016>

Reviewed by Simon Fraser.

* LayoutTests/css3/filters/backdrop/backdrop-filter-nested-expected.html: Added.
* LayoutTests/css3/filters/backdrop/backdrop-filter-nested.html: Added.
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::recursiveCommitChanges):

Canonical link: https://commits.webkit.org/286242@main